[gd_scene load_steps=2 format=3 uid="uid://ui_hud"]

[ext_resource type="Script" path="res://scripts/ui/HUD.gd" id="1_hud"]

[node name="UI_HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 200.0
offset_bottom = 120.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="BondingLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Bonding"

[node name="BondingBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 15)
layout_mode = 2
value = 0.0
show_percentage = false

[node name="EntertainmentLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Entertainment"

[node name="EntertainmentBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(150, 15)
layout_mode = 2
value = 0.0
show_percentage = false

[node name="TimeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "8:00 AM"

[node name="InteractionPrompt" type="Label" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
text = "[E] Interact"
horizontal_alignment = 1

[node name="MessagePanel" type="Panel" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2

[node name="MessageLabel" type="Label" parent="MessagePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "Message"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
